style.css
/*
Theme Name: ArtPress
Theme URI: http://keithdevon.com
Description: ArtPress has been built specifically for artists. It is a theme that includes advanced image handling and support for popular e-commerce plugins.
Tags: buddypress
Author: Heart Themes
Version: 0.1
License: GNU General Public License
License URI: license.txt
*/


/* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
-------------------------------------------------------------- */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	background: transparent;
	border: 0;
	margin: 0;
	padding: 0;
	vertical-align: baseline;
}
body {
    /*background: url(images/grid.png);*/
	
}
h1, h2, h3, h4, h5, h6 {
	clear: both;
	font-weight: normal;
}
ol, ul {
	list-style: none;
}
blockquote {
	quotes: none;
}
blockquote:before, blockquote:after {
	content: '';
	content: none;
}
del {
	text-decoration: line-through;
}
/* tables still need 'cellspacing="0"' in the markup */
table {
	border-collapse: collapse;
	border-spacing: 0;
}
a img {
	border: none;
}

/* =Layout
-------------------------------------------------------------- */

/*
LAYOUT: Two columns
DESCRIPTION: Two-column fixed layout with one sidebar right of content
*/

.container {
	padding-bottom: 1.5em;
}
.row {
    padding-top:1.5em;
    }

#content {

}
#primary,
#secondary {
	
}
#secondary {
	clear: right;
}
#footer {
    background: rgba(0,0,0,0.1);;
}

/*
LAYOUT: Full width, no sidebar
DESCRIPTION: Full width content with no sidebar; used for attachment pages
*/

.single-attachment #content {
	margin: 0 auto;
}

.entry-attachment {
    margin:3em 0;
    }


/* =Fonts
-------------------------------------------------------------- */
body,
input,
textarea,
.page-title span,
.pingback a.url {
	font-family: Georgia, "Bitstream Charter", serif;
}
h3#comments-title,
h3#reply-title,
#access .menu,
#access div.menu ul,
#cancel-comment-reply-link,
.form-allowed-tags,
#site-info,
#site-title,
#wp-calendar,
.comment-meta,
.comment-body tr th,
.comment-body thead th,
.entry-content label,
.entry-content tr th,
.entry-content thead th,
.entry-meta,
.entry-title,
.entry-utility,
#respond label,
.navigation,
.page-title,
.pingback p,
.reply,
.widget-title,
.wp-caption-text {
	font-family: "Helvetica Neue", Arial, Helvetica, "Nimbus Sans L", sans-serif;
}
input[type=submit] {
	font-family: "Helvetica Neue", Arial, Helvetica, "Nimbus Sans L", sans-serif;
}
pre {
	font-family: "Courier 10 Pitch", Courier, monospace;
}
code {
	font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
}


/* =Structure
-------------------------------------------------------------- */

/* The main theme structure */

#wrapper {
	background: #fff;
	margin-top: 20px;
	padding: 0 20px;
}

/* Structure the footer area */
#footer-widget-area {
	overflow: hidden;
}
#footer-widget-area .widget-area {
	
}
#footer-widget-area #fourth {
	
}
#site-info {
	float: left;
	font-weight: bold;
}
#site-generator {
	float: right;
}


/* =Global Elements
-------------------------------------------------------------- */

/* Main global 'theme' and typographic styles */
body {
	line-height:150%;
}
body,
input,
textarea {
	color: #666;
}
hr {
	background-color: #e7e7e7;
	border: 0;
	clear: both;
	height: 1px;
	margin-bottom: 18px;
}

/* Text elements */

h1, h2, h3, h4, h5, #access {
    color: #333;
    text-shadow: 1px 1px 1px rgba(256,256,256,.5);
    }
    
#site-title, h1, h2, h3, h4 {
	text-rendering: optimizeLegibility; 
	}

h1 {
    font-size: 2.25em;
    line-height: 1.334em;
    margin-bottom: .54em;
	padding-top:.14em;
    }
    
h2 {
    font-size:2.25em;
    line-height:1.3333em;
    margin-bottom: 0.54em;
    padding-top:.81em;
    font-weight:bold;
    }
    
h3 {
    font-size:1.5em;
    line-height:1em;
    margin-bottom: 1.2em;
    padding-top:.85em;
    }

h4 {
    font-size: 1.333em;
    line-height: 1.143em;
    margin-bottom:0.943em;
    padding-top:.2em;
    }

h5, p {
    font-size: 1em;
	margin-bottom: 1.5em;
}
ul {
	list-style: square;
	margin: 0 0 1.5em 1.5em;
}
ol {
	list-style: decimal;
	margin: 0 0 1.5em 1.5em;
}
ol ol {
	list-style: upper-alpha;
}
ol ol ol {
	list-style: lower-roman;
}
ol ol ol ol {
	list-style: lower-alpha;
}
ul ul,
ol ol,
ul ol,
ol ul {
	margin-bottom: 0;
}
dl {
	margin: 0 0 24px 0;
}
dt {
	font-weight: bold;
}
dd {
	margin-bottom: 18px;
}
strong {
	font-weight: bold;
}
cite,
em,
i {
	font-style: italic;
}
big {
	font-size: 131.25%;
}
ins {
	background: #ffc;
	text-decoration: none;
}
blockquote {
	font-style: italic;
	padding: 0 3em;
}
blockquote cite,
blockquote em,
blockquote i {
	font-style: normal;
}
pre {
	background: #f7f7f7;
	color: #222;
	line-height: 18px;
	margin-bottom: 18px;
	padding: 1.5em;
}
abbr,
acronym {
	border-bottom: 1px dotted #666;
	cursor: help;
}
sup,
sub {
	height: 0;
	line-height: 1;
	position: relative;
	vertical-align: baseline;
}
sup {
	bottom: 1ex;
}
sub {
	top: .5ex;
}
input[type="text"],
textarea {
	background: #f9f9f9;
	border: 1px solid #ccc;
	box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
	-moz-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
	-webkit-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
	padding: 2px;
}
a:link {
	color: #0066cc;
}
a:visited {
	color: #743399;
}
a:active,
a:hover {
	color: #ff4b33;
}

/* Text meant only for screen readers */
.screen-reader-text {
	position: absolute;
	left: -9000px;
}


/* =Header
-------------------------------------------------------------- */

#header {
    background: rgba(0,0,0,0.1);
    padding-bottom:18px;
    padding-top:24px;
    /*margin-top:16px; */
}
#masthead {
    padding-top:0px;
    position:relative;
    }
/* ... */

